Reorder and update configuration settings in _config.yml

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,7 @@
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
-show_downloads: false
 title: Thomas Chen
 description: Homepage of Thomas Chen
+show_downloads: false
+google_analytics:
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+remote_theme: pages-themes/cayman@v0.2.0
