Update homepage description in config file

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: Thomas Chen
-description: Homepage of Thomas Chen
+description: Welcome to my homepage
 show_downloads: false
 google_analytics:
 plugins:
