--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,4 +4,4 @@ show_downloads: false
 google_analytics:
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
-remote_theme: pages-themes/cayman@v0.2.0
+remote_theme: pages-themes/architect@v0.2.0
