--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,3 +5,4 @@ google_analytics:
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 remote_theme: pages-themes/architect@v0.2.0
+github.is_user_page: false
