--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
-title: Thomas Chen
-description: Welcome to my homepage
+title: Welcome to my homepage
+description: Thomas Chen
 show_downloads: false
 google_analytics:
 plugins:
