--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
-title: Welcome to my homepage
-description: Thomas Chen
+title: Tom Chen
+description: Welcome to my homepage
 show_downloads: false
 google_analytics:
 plugins:
